@@ -16,19 +16,21 @@ import uk.gov.hmcts.reform.pip.model.enums.UserActions;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+import static uk.gov.hmcts.reform.pip.account.management.model.MediaApplicationStatus.APPROVED;
+import static uk.gov.hmcts.reform.pip.account.management.model.MediaApplicationStatus.REJECTED;
 import static uk.gov.hmcts.reform.pip.model.LogBuilder.writeLog;
 
 @Slf4j
 @Service
-@SuppressWarnings("PMD.LawOfDemeter")
 public class MediaApplicationService {
 
     private final MediaApplicationRepository mediaApplicationRepository;
 
     private final AzureBlobService azureBlobService;
     private final PublicationService publicationService;
+
+    private static final String APPLICATION_NOT_FOUND = "Application with id %s could not be found";
 
     @Autowired
     public MediaApplicationService(MediaApplicationRepository mediaApplicationRepository,
@@ -66,7 +68,7 @@ public class MediaApplicationService {
      */
     public MediaApplication getApplicationById(UUID id) {
         return mediaApplicationRepository.findById(id).orElseThrow(() ->
-            new NotFoundException(String.format("Application with id %s could not be found", id)));
+            new NotFoundException(String.format(APPLICATION_NOT_FOUND, id)));
     }
 
     /**
@@ -115,14 +117,14 @@ public class MediaApplicationService {
      */
     public MediaApplication updateApplication(UUID id, MediaApplicationStatus status) {
         MediaApplication applicationToUpdate = mediaApplicationRepository.findById(id).orElseThrow(() ->
-            new NotFoundException(String.format("Application with id %s could not be found", id)));
+            new NotFoundException(String.format(APPLICATION_NOT_FOUND, id)));
 
         log.info(writeLog(UserActions.UPDATE_MEDIA_APPLICATION, applicationToUpdate.getId().toString()));
 
         applicationToUpdate.setStatus(status);
         applicationToUpdate.setStatusDate(LocalDateTime.now());
 
-        if (MediaApplicationStatus.APPROVED.equals(status) || MediaApplicationStatus.REJECTED.equals(status)) {
+        if (APPROVED.equals(status) || REJECTED.equals(status)) {
             azureBlobService.deleteBlob(applicationToUpdate.getImage());
         }
 
@@ -136,7 +138,7 @@ public class MediaApplicationService {
      */
     public void deleteApplication(UUID id) {
         MediaApplication applicationToDelete = mediaApplicationRepository.findById(id).orElseThrow(() ->
-            new NotFoundException(String.format("Application with id %s could not be found", id)));
+            new NotFoundException(String.format(APPLICATION_NOT_FOUND, id)));
 
         log.info(writeLog(UserActions.DELETE_MEDIA_APPLICATION, applicationToDelete.getId().toString()));
 
@@ -161,9 +163,9 @@ public class MediaApplicationService {
     private void processApplicationsForDeleting() {
         List<MediaApplication> mediaApplications = getApplications();
         mediaApplicationRepository.deleteAllInBatch(
-            mediaApplications.stream().filter(app -> app.getStatus().equals(MediaApplicationStatus.APPROVED)
-                || app.getStatus().equals(MediaApplicationStatus.REJECTED))
-                .collect(Collectors.toList()));
+            mediaApplications.stream().filter(app -> app.getStatus().equals(APPROVED)
+                || app.getStatus().equals(REJECTED))
+                .toList());
 
         log.info("Approved and Rejected media applications deleted");
     }
